@@ -3,6 +3,7 @@ Rework: got rid of NetzkeFormPanelField and NetzkeGridPanelColumn classes along 
 New: dynamic hiding of columns from column menu in GridPanel.
 New: FormPanel now supports combo boxes.
 Fix: config[:bbar] set to 'false' now works in grids with pagination
+New: you can specify :preloaded => true in a tab config in TabPanel to preload the widget in that tab along with the TabPanel itself
 
 v0.3.10
 BasicApp-based widgets can now introduce arbitrary layout, following the convention of defining "main-panel" and "main-toolbar" panels with layout 'fit'.
